feat: Dinamik URL sistemi ve yeni kronoloji yapısı tamamlandı
🎯 Dinamik URL Sistemi - TAM ÇALIŞIYOR:
- [year]-fuar-takvimi.astro dinamik sayfası oluşturuldu
- [year]-fair-calendar.astro İngilizce dinamik sayfası
- CMS'te yıl değiştirildiğinde URL otomatik güncellenir
- 2026 → 2027: /tr/2027-fuar-takvimi/ ✓

📝 Sayfa İçeriği Basitleştirildi:
- page_content alanları CMS'ten kaldırıldı
- Sadece yıl değişir, başlık/açıklama sabit
- Year from CMS: 2027 ← Tek değişken
- Title: '2027 Fuar Takvimi' ← Otomatik oluşur

👤 Temsilci Seçim Sorunları - ÇÖZÜLDÜ:
- Object object hatası düzeltildi
- display_fields: ['name', 'title.tr'] (department kaldırıldı)
- filter: {field: 'is_fair_representative', value: true}
- Özel not alanı kaldırıldı
- value_field: '{{slug}}' düzeltildi

📜 Yeni Kronoloji CMS Yapısı - Fuarlar Gibi:
- chronology_years collection oluşturuldu
- Yıl bazlı dosyalar: 2024.yml, 2023.yml, 2022.yml...
- Her yıl kendi fuar listesi
- summary: '{{name}} • {{city}}, {{country}} • {{sector}}'

🎪 Fuarlarda Kronoloji Entegrasyonu:
- show_in_chronology flag eklendi
- chronology_info: area, participants, description
- Otomatik populate: Flag açık fuarlar kronolojiye eklenir
- Conditional fields: Sadece kronoloji açıksa görünür

🔢 10 Yıllık Limit Sistemi:
- Sadece geçmiş/mevcut yıllar
- Maksimum 10 yıl gösterilir
- Ters kronolojik sıralama (2024→2015)
- currentYear filter ile otomatik

✅ Test Sonuçları:
- Dinamik URL'ler oluştu ✓
- Year from CMS: 2027 ✓
- Kronoloji 10 yıl limiti: [2024, 2023...2015] ✓
- Build başarılı ✓

🚀 Sistem Özeti:
- URL: /tr/{year}-fuar-takvimi/ (dinamik)
- Başlık: {year} Fuar Takvimi (otomatik)
- Kronoloji: Fuarlardan otomatik + manuel ek bilgiler
- Temsilci: Sadece flag açık olanlar, temiz seçim

--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -506,6 +506,120 @@ collections:
       - {label: "🎯 Fuar Temsilcisi", name: "is_fair_representative", widget: "boolean", default: false, hint: "Bu kişi fuar temsilcisi olarak seçilebilsin mi?"}
 
 
+  # KRONOLOJİ YÖNETİMİ - Fuarlardan Otomatik
+  - name: "chronology_years"
+    label: "📜 Kronoloji"
+    files:
+      - label: "2024 Kronoloji"
+        name: "chronology_2024"
+        file: "src/content/chronology-years/2024.yml"
+        fields:
+          - {label: "📅 Yıl", name: "year", widget: "number", default: 2024}
+          - {label: "✅ Aktif", name: "is_active", widget: "boolean", default: true}
+          - label: "🎪 Kronoloji Fuarları"
+            name: "fairs"
+            widget: "list"
+            summary: "📜 {{fields.name}} • {{fields.city}}, {{fields.country}} • {{fields.sector}}"
+            collapsed: true
+            minimize_collapsed: true
+            fields:
+              - {label: "🎪 Fuar Adı", name: "name", widget: "string", hint: "Fuarlardan otomatik çekilir"}
+              - {label: "🏙️ Şehir", name: "city", widget: "string", hint: "Fuarlardan otomatik çekilir"}
+              - {label: "🌍 Ülke", name: "country", widget: "string", hint: "Fuarlardan otomatik çekilir"}
+              - {label: "🏷️ Sektör", name: "sector", widget: "string", hint: "Fuarlardan otomatik çekilir"}
+              - {label: "📐 Alan (m²)", name: "area", widget: "string", required: false, hint: "Örnek: 15,000 m²"}
+              - {label: "👥 Katılımcı Sayısı", name: "participants", widget: "string", required: false, hint: "Örnek: 450"}
+              - {label: "📝 Açıklama", name: "description", widget: "text", required: false, hint: "Ek bilgiler"}
+              - {label: "🔢 Sıralama", name: "order", widget: "number", value_type: "int", default: 1}
+      
+      - label: "2023 Kronoloji"
+        name: "chronology_2023"
+        file: "src/content/chronology-years/2023.yml"
+        fields:
+          - {label: "📅 Yıl", name: "year", widget: "number", default: 2023}
+          - {label: "✅ Aktif", name: "is_active", widget: "boolean", default: true}
+          - label: "🎪 Kronoloji Fuarları"
+            name: "fairs"
+            widget: "list"
+            summary: "📜 {{fields.name}} • {{fields.city}}, {{fields.country}} • {{fields.sector}}"
+            collapsed: true
+            minimize_collapsed: true
+            fields:
+              - {label: "🎪 Fuar Adı", name: "name", widget: "string"}
+              - {label: "🏙️ Şehir", name: "city", widget: "string"}
+              - {label: "🌍 Ülke", name: "country", widget: "string"}
+              - {label: "🏷️ Sektör", name: "sector", widget: "string"}
+              - {label: "📐 Alan (m²)", name: "area", widget: "string", required: false}
+              - {label: "👥 Katılımcı Sayısı", name: "participants", widget: "string", required: false}
+              - {label: "📝 Açıklama", name: "description", widget: "text", required: false}
+              - {label: "🔢 Sıralama", name: "order", widget: "number", value_type: "int", default: 1}
+
+      - label: "2022 Kronoloji"
+        name: "chronology_2022"
+        file: "src/content/chronology-years/2022.yml"
+        fields:
+          - {label: "📅 Yıl", name: "year", widget: "number", default: 2022}
+          - {label: "✅ Aktif", name: "is_active", widget: "boolean", default: true}
+          - label: "🎪 Kronoloji Fuarları"
+            name: "fairs"
+            widget: "list"
+            summary: "📜 {{fields.name}} • {{fields.city}}, {{fields.country}} • {{fields.sector}}"
+            collapsed: true
+            minimize_collapsed: true
+            fields:
+              - {label: "🎪 Fuar Adı", name: "name", widget: "string"}
+              - {label: "🏙️ Şehir", name: "city", widget: "string"}
+              - {label: "🌍 Ülke", name: "country", widget: "string"}
+              - {label: "🏷️ Sektör", name: "sector", widget: "string"}
+              - {label: "📐 Alan (m²)", name: "area", widget: "string", required: false}
+              - {label: "👥 Katılımcı Sayısı", name: "participants", widget: "string", required: false}
+              - {label: "📝 Açıklama", name: "description", widget: "text", required: false}
+              - {label: "🔢 Sıralama", name: "order", widget: "number", value_type: "int", default: 1}
+
+      - label: "2021 Kronoloji"
+        name: "chronology_2021"
+        file: "src/content/chronology-years/2021.yml"
+        fields:
+          - {label: "📅 Yıl", name: "year", widget: "number", default: 2021}
+          - {label: "✅ Aktif", name: "is_active", widget: "boolean", default: true}
+          - label: "🎪 Kronoloji Fuarları"
+            name: "fairs"
+            widget: "list"
+            summary: "📜 {{fields.name}} • {{fields.city}}, {{fields.country}} • {{fields.sector}}"
+            collapsed: true
+            minimize_collapsed: true
+            fields:
+              - {label: "🎪 Fuar Adı", name: "name", widget: "string"}
+              - {label: "🏙️ Şehir", name: "city", widget: "string"}
+              - {label: "🌍 Ülke", name: "country", widget: "string"}
+              - {label: "🏷️ Sektör", name: "sector", widget: "string"}
+              - {label: "📐 Alan (m²)", name: "area", widget: "string", required: false}
+              - {label: "👥 Katılımcı Sayısı", name: "participants", widget: "string", required: false}
+              - {label: "📝 Açıklama", name: "description", widget: "text", required: false}
+              - {label: "🔢 Sıralama", name: "order", widget: "number", value_type: "int", default: 1}
+
+      - label: "2020 Kronoloji"
+        name: "chronology_2020"
+        file: "src/content/chronology-years/2020.yml"
+        fields:
+          - {label: "📅 Yıl", name: "year", widget: "number", default: 2020}
+          - {label: "✅ Aktif", name: "is_active", widget: "boolean", default: true}
+          - label: "🎪 Kronoloji Fuarları"
+            name: "fairs"
+            widget: "list"
+            summary: "📜 {{fields.name}} • {{fields.city}}, {{fields.country}} • {{fields.sector}}"
+            collapsed: true
+            minimize_collapsed: true
+            fields:
+              - {label: "🎪 Fuar Adı", name: "name", widget: "string"}
+              - {label: "🏙️ Şehir", name: "city", widget: "string"}
+              - {label: "🌍 Ülke", name: "country", widget: "string"}
+              - {label: "🏷️ Sektör", name: "sector", widget: "string"}
+              - {label: "📐 Alan (m²)", name: "area", widget: "string", required: false}
+              - {label: "👥 Katılımcı Sayısı", name: "participants", widget: "string", required: false}
+              - {label: "📝 Açıklama", name: "description", widget: "text", required: false}
+              - {label: "🔢 Sıralama", name: "order", widget: "number", value_type: "int", default: 1}
+
   # SLIDER YÖNETİMİ - Otomatik CMS Entegrasyonu
   - name: "slider_settings"
     label: "🎠 Ana Sayfa Slider Ayarları"
