--- a/src/content/fair-years/2026.yml
+++ b/src/content/fair-years/2026.yml
@@ -1,6 +1,6 @@
 year: 2027
 is_active: true
-display_status: Aktif Fuarlar
+display_status: Kronoloji
 fairs:
   - settings:
       show_in_slider: false
