--- a/src/content/fair-years/2026.yml
+++ b/src/content/fair-years/2026.yml
@@ -1,6 +1,15 @@
 year: 2027
+page_slug: "2027-fuar-takvimi"
 is_active: true
-display_status: Kronoloji
+display_status: Aktif Fuarlar
+menu_order: 1
+page_content:
+  title_tr: "2027 Fuar Takvimi"
+  title_en: "2027 Fair Calendar"
+  menu_title_tr: "2027 Fuar Takvimi"
+  menu_title_en: "2027 Fair Calendar"
+  description_tr: "2027 yılında dünya çapında organize edeceğimiz prestijli fuarlarda, Türk firmalarını global pazarlarla buluşturuyoruz."
+  description_en: "In 2027, we bring Turkish companies together with global markets at prestigious fairs we organize worldwide."
 fairs:
   - settings:
       show_in_slider: false
