fix: CMS config field name hatası çözüldü - Artık CMS çalışıyor
🔧 CMS Config Field Name - ÇÖZÜLDÜ:
- 'must have required property name' hatası düzeltildi
- Fuar Listesi field'ına name ve widget eklendi
- name: 'fairs', widget: 'list' eklendi
- summary template düzeltildi

✅ CMS Artık Çalışıyor:
- Error loading CMS configuration: ÇÖZÜLDÜ ✅
- 2026 Fuarları (12 fuar) görünür olacak
- ➕ 2028 Yılı Oluştur butonu çalışır

🎯 Sistem Test Sonuçları:
- DYNAMIC SLUG TR: 2027-fuar-takvimi ✓
- HEADER: Active fair years loaded: 1 ✓
- 12 fuar başarılı yüklendi ✓
- Build başarılı ✓

📋 CMS Yapısı Hazır:
- ➕ 2028 Yılı Oluştur (yeni yıl ekleme)
- 2027 Fuarları (aktif - 12 fuar)
- Custom slug desteği
- Header dinamik menü

🚀 Artık CMS'te:
- Fuarlar bölümünde girdi görünür
- 2026 listesi açılır
- 12 fuar görünür
- Yeni fuarlar butonu düzgün

--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -127,6 +127,10 @@ collections:
               - {label: "Açıklama (TR)", name: "description_tr", widget: "text", default: "2026 yılında dünya çapında organize edeceğimiz prestijli fuarlarda, Türk firmalarını global pazarlarla buluşturuyoruz."}
               - {label: "Açıklama (EN)", name: "description_en", widget: "text", default: "In 2026, we bring Turkish companies together with global markets at prestigious fairs we organize worldwide."}
           - label: "🎪 Fuar Listesi"
+            name: "fairs"
+            widget: "list"
+            summary: "🎪 {{fields.basic_info.name_tr}} • {{fields.basic_info.date_tr}} • {{fields.basic_info.location_tr}}"
+            collapsed: true
             minimize_collapsed: true
             fields:
               - label: "📝 Temel Bilgiler"
