--- a/src/content/fair-years/2026.yml
+++ b/src/content/fair-years/2026.yml
@@ -1,5 +1,6 @@
 year: 2027
 page_slug: "2027-fuar-takvimi"
+page_slug_en: "2027-fair-calendar"
 is_active: true
 display_status: Aktif Fuarlar
 menu_order: 1
