--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -112,7 +112,8 @@ collections:
         file: "src/content/fair-years/2026.yml"
         fields:
           - {label: "📅 Yıl", name: "year", widget: "number", default: 2026}
-          - {label: "🔗 Sayfa Slug", name: "page_slug", widget: "string", default: "2026-fuar-takvimi", pattern: ['^[a-z0-9-]+$', "Sadece küçük harf, rakam ve tire"]}
+          - {label: "🔗 Sayfa Slug (TR)", name: "page_slug", widget: "string", default: "2026-fuar-takvimi", pattern: ['^[a-z0-9-]+$', "Sadece küçük harf, rakam ve tire"]}
+          - {label: "🔗 Sayfa Slug (EN)", name: "page_slug_en", widget: "string", default: "2026-fair-calendar", pattern: ['^[a-z0-9-]+$', "Only lowercase, numbers and dash"]}
           - {label: "✅ Aktif", name: "is_active", widget: "boolean", default: true}
           - {label: "📊 Görüntüleme Durumu", name: "display_status", widget: "select", options: ["Aktif Fuarlar", "Kronoloji"], default: "Aktif Fuarlar"}
           - {label: "🔢 Menü Sırası", name: "menu_order", widget: "number", value_type: "int", default: 3}
@@ -204,14 +205,23 @@ collections:
         name: "fairs_2025"
         file: "src/content/fair-years/2025.yml"
         fields:
-          - label: "Yıl"
-            name: "year"
-            widget: "number"
-            default: 2025
-          - label: "Aktif"
-            name: "is_active"
-            widget: "boolean"
-            default: true
+          - {label: "📅 Yıl", name: "year", widget: "number", default: 2025}
+          - {label: "🔗 Sayfa Slug (TR)", name: "page_slug", widget: "string", default: "2025-fuar-takvimi", pattern: ['^[a-z0-9-]+$', "Sadece küçük harf, rakam ve tire"]}
+          - {label: "🔗 Sayfa Slug (EN)", name: "page_slug_en", widget: "string", default: "2025-fair-calendar", pattern: ['^[a-z0-9-]+$', "Only lowercase, numbers and dash"]}
+          - {label: "✅ Aktif", name: "is_active", widget: "boolean", default: true}
+          - {label: "📊 Görüntüleme Durumu", name: "display_status", widget: "select", options: ["Aktif Fuarlar", "Kronoloji"], default: "Aktif Fuarlar"}
+          - {label: "🔢 Menü Sırası", name: "menu_order", widget: "number", value_type: "int", default: 2}
+          - label: "📝 Sayfa İçeriği"
+            name: "page_content"
+            widget: "object"
+            collapsed: true
+            fields:
+              - {label: "Sayfa Başlığı (TR)", name: "title_tr", widget: "string", default: "2025 Fuar Takvimi"}
+              - {label: "Sayfa Başlığı (EN)", name: "title_en", widget: "string", default: "2025 Fair Calendar"}
+              - {label: "Menü Başlığı (TR)", name: "menu_title_tr", widget: "string", default: "2025 Fuar Takvimi"}
+              - {label: "Menü Başlığı (EN)", name: "menu_title_en", widget: "string", default: "2025 Fair Calendar"}
+              - {label: "Açıklama (TR)", name: "description_tr", widget: "text", default: "2025 yılında dünya çapında organize edeceğimiz prestijli fuarlarda, Türk firmalarını global pazarlarla buluşturuyoruz."}
+              - {label: "Açıklama (EN)", name: "description_en", widget: "text", default: "In 2025, we bring Turkish companies together with global markets at prestigious fairs we organize worldwide."}
           - label: "Fuar Listesi"
             name: "fairs"
             widget: "list"
