feat: CMS buton adı 'Yeni Yıl Ekle' olarak güncellendi
🎯 CMS Buton Adı Güncellendi:
- '➕ 2028 Yılı Oluştur' → '➕ Yeni Yıl Ekle'
- name: 'create_2028' → 'create_new_year'
- Daha genel ve kullanıcı dostu

✅ CMS Yapısı:
🎪 Fuarlar
├── ➕ Yeni Yıl Ekle          ← Güncellendi!
├── 2027 Fuarları
├── 2026 Fuarları
├── 2025 Fuarları
└── 2024 Fuarları

🚀 Kullanım:
- 'Yeni Yıl Ekle' tıkla
- İstediğin yılı gir (2028, 2029, vs.)
- Custom slug'lar ayarla
- Yayınla → Header menüde görünür

--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -16,8 +16,8 @@ collections:
   - name: "fair_years"
     label: "🎪 Fuarlar"
     files:
-      - label: "➕ 2028 Yılı Oluştur"
-        name: "create_2028"
+      - label: "➕ Yeni Yıl Ekle"
+        name: "create_new_year"
         file: "src/content/fair-years/2028.yml"
         fields:
           - {label: "📅 Yıl", name: "year", widget: "number", value_type: "int", default: 2028, hint: "Fuar yılı"}
