fix: Header menü sorunu çözüldü - Artık 2 aktif yıl görünüyor
🎯 Header Menü Sorunu - ÇÖZÜLDÜ:
- 2025.yml dosyasına eksik alanlar eklendi
- display_status: 'Aktif Fuarlar' eklendi
- page_slug ve page_slug_en eklendi
- page_content object eklendi

✅ Header Test Sonucu:
- HEADER: Active fair years loaded: 2 ✓
- Artık header menüde 2 yıl görünür
- 2025 ve 2027 yılları aktif

📋 2025.yml Eklenen Alanlar:
- page_slug: '2025-fuar-takvimi'
- page_slug_en: '2025-fair-calendar'
- display_status: 'Aktif Fuarlar'
- menu_order: 2
- page_content: title_tr/en, menu_title_tr/en, description_tr/en

🎪 CMS Yapısı Güncel:
- ➕ Yeni Yıl Ekle (buton adı güncellendi)
- 2027 Fuarları (menu_order: 1)
- 2025 Fuarları (menu_order: 2) ← YENİ AKTİF

🚀 Sonraki:
- Frontend tasarım uyumluluğu
- TypeScript hataları
- Dinamik sayfa tasarımını mevcut tasarımla uyumlu hale getir

--- a/src/content/fair-years/2025.yml
+++ b/src/content/fair-years/2025.yml
@@ -1,5 +1,16 @@
 year: 2025
+page_slug: "2025-fuar-takvimi"
+page_slug_en: "2025-fair-calendar"
 is_active: true
+display_status: Aktif Fuarlar
+menu_order: 2
+page_content:
+  title_tr: "2025 Fuar Takvimi"
+  title_en: "2025 Fair Calendar"
+  menu_title_tr: "2025 Fuar Takvimi"
+  menu_title_en: "2025 Fair Calendar"
+  description_tr: "2025 yılında dünya çapında organize edeceğimiz prestijli fuarlarda, Türk firmalarını global pazarlarla buluşturuyoruz."
+  description_en: "In 2025, we bring Turkish companies together with global markets at prestigious fairs we organize worldwide."
 fairs:
   - basic_info:
       name_tr: LeShow Moskova - Uluslararası Moda ve Tekstil Endüstrisi Fuarı
