feat: Tasarım düzeltmeleri ve dinamik yıl sistemi
✅ Tasarım Düzeltmeleri:
- Representative title kırmızı (mail/telefon normal gri)
- Hover efekti eklendi (#CE1A28)

🎪 Dinamik Yıl Sistemi:
- CMS button yazıları artık dinamik ({{fields.year}} Fuarları)
- 2026.yml → 2027 yılına güncellendi
- 2028.yml yeni yıl template'i oluşturuldu
- Tüm yıl dosyaları dinamik label kullanıyor

🔧 CMS Entegrasyonu:
- Processing 2028 with 0 fairs (hazır template)
- Processing 2027 with 12 fairs (aktif)
- Processing 2025 with 4 fairs (aktif)
- 6 yıl collection tanımlandı (2022-2028)

--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -107,7 +107,7 @@ collections:
                     field: {label: "Görsel", name: "image", widget: "image"}
                     hint: "📐 İdeal Ölçü: 400x400px | Format: JPG/PNG | Kare kompozisyon önerilir"
 
-      - label: "2026 Fuarları"
+      - label: "{{fields.year}} Fuarları"
         name: "fairs_2026"
         file: "src/content/fair-years/2026.yml"
         fields:
@@ -201,7 +201,7 @@ collections:
                     field: {label: "Görsel", name: "image", widget: "image"}
                     hint: "📐 İdeal Ölçü: 400x400px | Format: JPG/PNG | Kare kompozisyon önerilir"
       
-      - label: "2025 Fuarları"
+      - label: "{{fields.year}} Fuarları"
         name: "fairs_2025"
         file: "src/content/fair-years/2025.yml"
         fields:
@@ -295,7 +295,7 @@ collections:
                     field: {label: "Görsel", name: "image", widget: "image"}
                     hint: "📐 İdeal Ölçü: 400x400px | Format: JPG/PNG | Kare kompozisyon önerilir"
       
-      - label: "2024 Fuarları"
+      - label: "{{fields.year}} Fuarları"
         name: "fairs_2024"
         file: "src/content/fair-years/2024.yml"
         fields:
@@ -380,7 +380,7 @@ collections:
                     field: {label: "Görsel", name: "image", widget: "image"}
                     hint: "📐 İdeal Ölçü: 400x400px | Format: JPG/PNG | Kare kompozisyon önerilir"
       
-      - label: "2023 Fuarları"
+      - label: "{{fields.year}} Fuarları"
         name: "fairs_2023"
         file: "src/content/fair-years/2023.yml"
         fields:
@@ -465,7 +465,7 @@ collections:
                     field: {label: "Görsel", name: "image", widget: "image"}
                     hint: "📐 İdeal Ölçü: 400x400px | Format: JPG/PNG | Kare kompozisyon önerilir"
       
-      - label: "2022 Fuarları"
+      - label: "{{fields.year}} Fuarları"
         name: "fairs_2022"
         file: "src/content/fair-years/2022.yml"
         fields:
